Fixed stiles: wrong height of body.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  height: 100vh;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   font-family: Arial;
